--- a/khushboo.ipynb
+++ b/khushboo.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "khushboo.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNLhy1IP18h3ScGHAroqcgL",
+      "authorship_tag": "ABX9TyMxCC4fztg3h4K1HABg8kol",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -109,8 +109,60 @@
         "url_travel_stock = r'https://www.alphavantage.co/query?function=TIME_SERIES_DAILY&symbol=EXPE&apikey=' + demo + '&datatype=csv'\r\n",
         "url_material_stock = r'https://www.alphavantage.co/query?function=TIME_SERIES_DAILY&symbol=NYSE:GOLD&apikey=' + demo + '&datatype=csv'"
       ],
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "WOLy9MxCC78v"
+      },
+      "source": [
+        "deaths_df = pd.read_csv(url_global_deaths)\r\n",
+        "confirm_df = pd.read_csv(url_global_confirmed)\r\n",
+        "us_stock = pd.read_csv(url_usa_stock)\r\n",
+        "ca_stock = pd.read_csv(url_canada_stock)\r\n",
+        "retail_stock = pd.read_csv(url_retail_stock)\r\n",
+        "travel_stock = pd.read_csv(url_travel_stock)\r\n",
+        "material_stock = pd.read_csv(url_material_stock)"
+      ],
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WerrqH_iDPPh",
+        "outputId": "3e3bde2f-e910-4c11-eafa-1d2cf2f1a0a0"
+      },
+      "source": [
+        "print(deaths_df.shape)\r\n",
+        "print(confirm_df.shape)\r\n",
+        "print(us_stock.shape)\r\n",
+        "print(ca_stock.shape)\r\n",
+        "print(retail_stock.shape)\r\n",
+        "print(travel_stock.shape)\r\n",
+        "print(material_stock.shape)"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "(274, 413)\n",
+            "(274, 413)\n",
+            "(100, 6)\n",
+            "(100, 6)\n",
+            "(100, 6)\n",
+            "(100, 6)\n",
+            "(100, 6)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
