--- a/khushboo.ipynb
+++ b/khushboo.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "khushboo.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMxCC4fztg3h4K1HABg8kol",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,7 +41,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ykvcdqJJ-XAa",
-        "outputId": "ded3175e-d50b-4a4d-e0a7-08bb86c7b831"
+        "outputId": "55f87a36-a07f-4c52-997f-69f8a57138ee"
       },
       "source": [
         "import pandas as pd\r\n",
@@ -52,7 +51,7 @@
         "! pip install alpha-vantage\r\n",
         "from alpha_vantage.timeseries import TimeSeries"
       ],
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -61,23 +60,23 @@
             "  Downloading https://files.pythonhosted.org/packages/ba/b4/d95f9e0eccea6732bab5a079772d453a4f0b68a9f63740d9cf320f92beaa/alpha_vantage-2.3.1-py3-none-any.whl\n",
             "Collecting aiohttp\n",
             "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/5b/a6/d36302eba284f4f427dc288f6b3ecd7f89d739cfca206b80311d3158f6d9/aiohttp-3.7.4-cp37-cp37m-manylinux2014_x86_64.whl (1.3MB)\n",
-            "\u001b[K     |████████████████████████████████| 1.3MB 7.2MB/s \n",
+            "\u001b[K     |████████████████████████████████| 1.3MB 6.6MB/s \n",
             "\u001b[?25hRequirement already satisfied: requests in /usr/local/lib/python3.7/dist-packages (from alpha-vantage) (2.23.0)\n",
-            "Collecting async-timeout<4.0,>=3.0\n",
-            "  Downloading https://files.pythonhosted.org/packages/e1/1e/5a4441be21b0726c4464f3f23c8b19628372f606755a9d2e46c187e65ec4/async_timeout-3.0.1-py3-none-any.whl\n",
+            "Requirement already satisfied: chardet<4.0,>=2.0 in /usr/local/lib/python3.7/dist-packages (from aiohttp->alpha-vantage) (3.0.4)\n",
             "Collecting yarl<2.0,>=1.0\n",
             "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/f1/62/046834c5fc998c88ab2ef722f5d42122230a632212c8afa76418324f53ff/yarl-1.6.3-cp37-cp37m-manylinux2014_x86_64.whl (294kB)\n",
-            "\u001b[K     |████████████████████████████████| 296kB 43.5MB/s \n",
+            "\u001b[K     |████████████████████████████████| 296kB 22.8MB/s \n",
             "\u001b[?25hCollecting multidict<7.0,>=4.5\n",
             "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/7c/a6/4123b8165acbe773d1a8dc8e3f0d1edea16d29f7de018eda769abb56bd30/multidict-5.1.0-cp37-cp37m-manylinux2014_x86_64.whl (142kB)\n",
-            "\u001b[K     |████████████████████████████████| 143kB 34.2MB/s \n",
-            "\u001b[?25hRequirement already satisfied: attrs>=17.3.0 in /usr/local/lib/python3.7/dist-packages (from aiohttp->alpha-vantage) (20.3.0)\n",
+            "\u001b[K     |████████████████████████████████| 143kB 21.0MB/s \n",
+            "\u001b[?25hCollecting async-timeout<4.0,>=3.0\n",
+            "  Downloading https://files.pythonhosted.org/packages/e1/1e/5a4441be21b0726c4464f3f23c8b19628372f606755a9d2e46c187e65ec4/async_timeout-3.0.1-py3-none-any.whl\n",
+            "Requirement already satisfied: attrs>=17.3.0 in /usr/local/lib/python3.7/dist-packages (from aiohttp->alpha-vantage) (20.3.0)\n",
             "Requirement already satisfied: typing-extensions>=3.6.5 in /usr/local/lib/python3.7/dist-packages (from aiohttp->alpha-vantage) (3.7.4.3)\n",
-            "Requirement already satisfied: chardet<4.0,>=2.0 in /usr/local/lib/python3.7/dist-packages (from aiohttp->alpha-vantage) (3.0.4)\n",
-            "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.7/dist-packages (from requests->alpha-vantage) (2.10)\n",
-            "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.7/dist-packages (from requests->alpha-vantage) (1.24.3)\n",
             "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.7/dist-packages (from requests->alpha-vantage) (2020.12.5)\n",
-            "Installing collected packages: async-timeout, multidict, yarl, aiohttp, alpha-vantage\n",
+            "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.7/dist-packages (from requests->alpha-vantage) (1.24.3)\n",
+            "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.7/dist-packages (from requests->alpha-vantage) (2.10)\n",
+            "Installing collected packages: multidict, yarl, async-timeout, aiohttp, alpha-vantage\n",
             "Successfully installed aiohttp-3.7.4 alpha-vantage-2.3.1 async-timeout-3.0.1 multidict-5.1.0 yarl-1.6.3\n"
           ],
           "name": "stdout"
@@ -92,7 +91,7 @@
       "source": [
         "demo = 'GF6ZHIZTJZE9APJY.' #YOUR API KEY HERE"
       ],
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -136,7 +135,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WerrqH_iDPPh",
-        "outputId": "3e3bde2f-e910-4c11-eafa-1d2cf2f1a0a0"
+        "outputId": "aa316207-7b6b-4b89-8775-cc52691afab5"
       },
       "source": [
         "print(deaths_df.shape)\r\n",
@@ -163,6 +162,21 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ry5WdUXNIvGk"
+      },
+      "source": [
+        "deaths_df_long = pd.melt(deaths_df, id_vars=['Province/State', 'Country/Region', 'Lat', 'Long'],\r\n",
+        "                        value_vars= deaths_df.columns[4:], var_name='timestamp', value_name='death_cases')\r\n",
+        "\r\n",
+        "confirm_df_long = pd.melt(confirm_df, id_vars=['Province/State', 'Country/Region', 'Lat', 'Long'],\r\n",
+        "                        value_vars= confirm_df.columns[4:], var_name='timestamp', value_name='confirmed_cases')"
+      ],
+      "execution_count": 7,
+      "outputs": []
     }
   ]
 }
