--- a/khushboo.ipynb
+++ b/khushboo.ipynb
@@ -20,7 +20,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/khushboolohat/Group-2-final/blob/main/khushboo.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/khushboolohat/Group-2-final/blob/Akshita/khushboo.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -177,6 +177,117 @@
       ],
       "execution_count": 7,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4X4NSYGdMiYF",
+        "outputId": "a87a483a-fc8d-4fb3-bed2-eb614b1554b5",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 204
+        }
+      },
+      "source": [
+        "confirm_df_long.head()"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Province/State</th>\n",
+              "      <th>Country/Region</th>\n",
+              "      <th>Lat</th>\n",
+              "      <th>Long</th>\n",
+              "      <th>timestamp</th>\n",
+              "      <th>confirmed_cases</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>NaN</td>\n",
+              "      <td>Afghanistan</td>\n",
+              "      <td>33.93911</td>\n",
+              "      <td>67.709953</td>\n",
+              "      <td>1/22/20</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>NaN</td>\n",
+              "      <td>Albania</td>\n",
+              "      <td>41.15330</td>\n",
+              "      <td>20.168300</td>\n",
+              "      <td>1/22/20</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>NaN</td>\n",
+              "      <td>Algeria</td>\n",
+              "      <td>28.03390</td>\n",
+              "      <td>1.659600</td>\n",
+              "      <td>1/22/20</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>NaN</td>\n",
+              "      <td>Andorra</td>\n",
+              "      <td>42.50630</td>\n",
+              "      <td>1.521800</td>\n",
+              "      <td>1/22/20</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>NaN</td>\n",
+              "      <td>Angola</td>\n",
+              "      <td>-11.20270</td>\n",
+              "      <td>17.873900</td>\n",
+              "      <td>1/22/20</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "  Province/State Country/Region       Lat       Long timestamp  confirmed_cases\n",
+              "0            NaN    Afghanistan  33.93911  67.709953   1/22/20                0\n",
+              "1            NaN        Albania  41.15330  20.168300   1/22/20                0\n",
+              "2            NaN        Algeria  28.03390   1.659600   1/22/20                0\n",
+              "3            NaN        Andorra  42.50630   1.521800   1/22/20                0\n",
+              "4            NaN         Angola -11.20270  17.873900   1/22/20                0"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 8
+        }
+      ]
     }
   ]
 }
